--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,12 @@
 #main > div:not(.visible){
     display: none;
 }
+
+.invalidInput{
+    border: 2px solid red;
+}
+
+.invalidInputMessage{
+    padding-left: 2em;
+    color: red;
+}
