--- a/css/styles.css
+++ b/css/styles.css
@@ -19,8 +19,8 @@
 #viewport{
     margin: auto;
     border: 1px solid gray;
-    width: 650px;
-    height: 650px;
+    width: 650px;  /* Must be divisible by 50 */
+    height: 650px; /* Must be divisible by 50 */
     display: block;
     overflow: hidden;
     background-color: rgb(13, 39, 79);
