--- a/css/styles.css
+++ b/css/styles.css
@@ -93,3 +93,26 @@
     float:right;
     visibility: hidden;
 }
+
+.inputPanel {
+    position: fixed;
+    left: 650px;
+    top: 600px;
+    transform: translate(-50%, -50%);
+    width: 500px;
+    height: 100px;
+    background-color: white;
+    z-index = 100;
+}
+
+.inputPanelMessage {
+    text-align: center;
+
+}
+
+.inputPanelButtonBox {
+}
+
+.inputPanelButton {
+
+}
