Can Add Abandoned Freighters. Redid Artifact Configuration. Made Artifact Placement more symmetrical. Fixed a bug with SpaceCraftMovement.js.

--- a/css/styles.css
+++ b/css/styles.css
@@ -106,7 +106,7 @@ body {
     width: 500px;
     height: 100px;
     background-color: white;
-    z-index = 100;
+    z-index: 100;
 }
 
 .inputPanelMessage {
