--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
 
 body {
     background-color: #bfbfbf;
+    overflow: hidden;
 }
 
 .col-1,
@@ -68,12 +69,12 @@ body {
     width: 200px;
 }
 
-#logarea{
+/* #logarea{
     margin: auto;
     display: inline-block;
     width: 200px;
     height: 600px;
-}
+} */
 
 /* Makes all divs within main vanish if they don't have the "visible" class applied to them */
 #main > div:not(.visible){
@@ -89,13 +90,9 @@ body {
     color: red;
 }
 
-#logarea {
-    float:left;
-}
-
 #gazarea {
-    float:right;
     visibility: hidden;
+    /* Needs to be changed to display: none */
 }
 
 .inputPanel {
