--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ body {
     width: 4000px;  /* Set dynamically, must be divisible by 50 and >= 650px */
     height: 4000px; /* Set dynamically, must be divisible by 50 and >= 650px */
     position: relative;
-    background: url("../img/gameWorldBackground.png");
+    background: url("../img/gameWorldBackground.jpg");
     z-index: 0;
 }
 
