--- a/css/ui.css
+++ b/css/ui.css
@@ -2,16 +2,19 @@
 * {
     box-sizing: border-box;
 }
+
 body {
     padding: 0;
     margin: 0;
     /* font-family: sans-serif; */
     font-family: 'Orbitron', sans-serif;
+    background-color: #bfbfbf;
+    overflow: hidden;
 }
+
 h1, h2, h3, h4, h5, h6 {
     margin: 3px 0;
 }
-
 
 /* Top Banner */
 header {
@@ -27,6 +30,28 @@ header {
     margin: 0;
 }
 
+/* Makes all divs within main vanish if they don't have the "visible" class applied to them */
+#main > div:not(.visible){
+    display: none;
+}
+
+.clearfix::after{
+    content: "";
+    display: block;
+    clear: both;
+}
+
+.col-1,
+.col-3{
+    float: left;
+    width: 20%;
+}
+
+.col-2{
+    float: left;
+    width: 60%
+}
+
 input, button{
     font-family: inherit;
 }
@@ -37,6 +62,7 @@ input, textarea {
     border: 1px solid #ced4da;
     border-radius: 10px;
 }
+
 #mainMenu {
     text-align: center;
 }
@@ -49,7 +75,6 @@ input, textarea {
     box-shadow: 5px 5px 7px rgba(0, 0, 0, 0.5);
 
 }
-
 
 .col-1 p {
     margin: 3px 0;
@@ -141,4 +166,22 @@ input, textarea {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+#UI{
+    display: inline-block;
+    width: 200px;
+}
+
+.invalidInput{
+    border: 2px solid red;
+}
+
+.invalidInputMessage{
+    padding-left: 2em;
+    color: red;
+}
+
+#gazarea {
+    visibility: hidden;
 }
